# AMP-BERT

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/: README.md
data/escape/: Fold1_reconstructed.csv  Fold2_reconstructed.csv  Test_reconstructed.csv
notebooks/: 01_reproduce_amp_bert.ipynb  01_train_amp_bert.ipynb  02_escape_benchmark.ipynb  02_test_reproduce.ipynb  03_escape_train.ipynb  04_escape_test.ipynb
scripts/: README.md  run_amp_bert.sh  run_escape.sh  test_amp_bert.py  test_escape.py  train_amp_bert.py  train_escape.py
src/amp_bert/: __init__.py  config.py  data.py  escape.py  metrics.py  model.py
