[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "amp-bert"
version = "0.1.0"
description = "Fine-tuned ProtBERT-BFD for antimicrobial peptide classification"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }

[tool.setuptools.packages.find]
where = ["src"]
